--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/animate.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
@@ -119,11 +121,35 @@
     <div class="w">
         <div class="main">
             <div class="focus">
+                <!-- 左侧和右侧按钮 -->
+                <a href="javascript:;" class="arrow-l">&lt;</a>
+                <a href="javascript:;" class="arrow-r">></a>
+                <!-- 轮播图部分 -->
                 <ul>
                     <li>
-                        <img src="upload/图层179.png" alt="">
+                        <a href="#"> <img src="upload/focus1.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="upload/focus2.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="upload/focus3.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="upload/focus4.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="upload/focus1.png" alt="">
+                        </a>
                     </li>
                 </ul>
+                <!-- 小圆点部分 -->
+                <ol class="circle">
+                </ol>
             </div>
             <div class="newflash">
                 <div class="news">
@@ -352,107 +378,107 @@
             </div>
         </div>
         <!-- 电脑办公 end-->
-    <!-- 楼层区域制作 end -->
-    <!-- footer底部模块start -->
-    <footer class="footer">
-        <div class="w">
-            <div class="mod_service">
-                <ul>
-                    <li>
-                        <h5></h5>
-                        <div class="service_txt">
-                            <h4>正品保障</h4>
-                            <p>正品保障，提供发票</p>
-                        </div>
-                    </li>
-                    <li>
-                        <h5></h5>
-                        <div class="service_txt">
-                            <h4>正品保障</h4>
-                            <p>正品保障，提供发票</p>
-                        </div>
-                    </li>
-                    <li>
-                        <h5></h5>
-                        <div class="service_txt">
-                            <h4>正品保障</h4>
-                            <p>正品保障，提供发票</p>
-                        </div>
-                    </li>
-                    <li>
-                        <h5></h5>
-                        <div class="service_txt">
-                            <h4>正品保障</h4>
-                            <p>正品保障，提供发票</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="mod_help">
-                <dl>
-                    <dt>购物指南</dt>
-                    <dd><a href="#">购物流程</a></dd>
-                    <dd><a href="#"> 会员介绍</a></dd>
-                    <dd><a href="#"> 生活旅行/团购</a></dd>
-                    <dd><a href="#"> 常见问题</a></dd>
-                    <dd><a href="#"> 大家电</a></dd>
-                    <dd><a href="#"> 联系客服</a></dd>
-                </dl>
-                <dl>
-                    <dt>购物指南</dt>
-                    <dd><a href="#">购物流程</a></dd>
-                    <dd><a href="#"> 会员介绍</a></dd>
-                    <dd><a href="#"> 生活旅行/团购</a></dd>
-                    <dd><a href="#"> 常见问题</a></dd>
-                    <dd><a href="#"> 大家电</a></dd>
-                    <dd><a href="#"> 联系客服</a></dd>
-                </dl>
-                <dl>
-                    <dt>购物指南</dt>
-                    <dd><a href="#">购物流程</a></dd>
-                    <dd><a href="#"> 会员介绍</a></dd>
-                    <dd><a href="#"> 生活旅行/团购</a></dd>
-                    <dd><a href="#"> 常见问题</a></dd>
-                    <dd><a href="#"> 大家电</a></dd>
-                    <dd><a href="#"> 联系客服</a></dd>
-                </dl>
-                <dl>
-                    <dt>购物指南</dt>
-                    <dd><a href="#">购物流程</a></dd>
-                    <dd><a href="#"> 会员介绍</a></dd>
-                    <dd><a href="#"> 生活旅行/团购</a></dd>
-                    <dd><a href="#"> 常见问题</a></dd>
-                    <dd><a href="#"> 大家电</a></dd>
-                    <dd><a href="#"> 联系客服</a></dd>
-                </dl>
-                <dl>
-                    <dt>购物指南</dt>
-                    <dd><a href="#">购物流程</a></dd>
-                    <dd><a href="#"> 会员介绍</a></dd>
-                    <dd><a href="#"> 生活旅行/团购</a></dd>
-                    <dd><a href="#"> 常见问题</a></dd>
-                    <dd><a href="#"> 大家电</a></dd>
-                    <dd><a href="#"> 联系客服</a></dd>
-                </dl>
-                <dl>
-                    <dt>帮助中心</dt>
-                    <dd><a href="#"><img src="/images/wx_cz.jpg" alt=""></a></dd>
-                    <dd><a href="#"> 品优购客户端</a></dd>
-                </dl>
-            </div>
-            <div class="mod_copyright">
-                <div class="links">
-                    <a>关于我们</a><i>|</i><a>联系我们</a><i>|</i><a>联系客服</a><i>|</i><a>商家入驻</a><i>|</i><a>营销中心</a><i>|</i><a>手机品优购</a><i>|</i><a>友情链接</a><i>|</i><a>销售联盟</a><i>|</i><a>品优购社区</a><i>|</i><a>品优购公益</a><i>|</i><a>English&nbsp;Site</a><i>|</i><a>Contact&nbsp;U
+        <!-- 楼层区域制作 end -->
+        <!-- footer底部模块start -->
+        <footer class="footer">
+            <div class="w">
+                <div class="mod_service">
+                    <ul>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h5></h5>
+                            <div class="service_txt">
+                                <h4>正品保障</h4>
+                                <p>正品保障，提供发票</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="copyright">
-                    <p>地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100 邮箱:zhanghj+itcast.cn</p>
-                    <p>京ICP备08001421号京公网安备110108007702</p>
+                <div class="mod_help">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#"> 会员介绍</a></dd>
+                        <dd><a href="#"> 生活旅行/团购</a></dd>
+                        <dd><a href="#"> 常见问题</a></dd>
+                        <dd><a href="#"> 大家电</a></dd>
+                        <dd><a href="#"> 联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#"> 会员介绍</a></dd>
+                        <dd><a href="#"> 生活旅行/团购</a></dd>
+                        <dd><a href="#"> 常见问题</a></dd>
+                        <dd><a href="#"> 大家电</a></dd>
+                        <dd><a href="#"> 联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#"> 会员介绍</a></dd>
+                        <dd><a href="#"> 生活旅行/团购</a></dd>
+                        <dd><a href="#"> 常见问题</a></dd>
+                        <dd><a href="#"> 大家电</a></dd>
+                        <dd><a href="#"> 联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#"> 会员介绍</a></dd>
+                        <dd><a href="#"> 生活旅行/团购</a></dd>
+                        <dd><a href="#"> 常见问题</a></dd>
+                        <dd><a href="#"> 大家电</a></dd>
+                        <dd><a href="#"> 联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd><a href="#">购物流程</a></dd>
+                        <dd><a href="#"> 会员介绍</a></dd>
+                        <dd><a href="#"> 生活旅行/团购</a></dd>
+                        <dd><a href="#"> 常见问题</a></dd>
+                        <dd><a href="#"> 大家电</a></dd>
+                        <dd><a href="#"> 联系客服</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>帮助中心</dt>
+                        <dd><a href="#"><img src="/images/wx_cz.jpg" alt=""></a></dd>
+                        <dd><a href="#"> 品优购客户端</a></dd>
+                    </dl>
                 </div>
+                <div class="mod_copyright">
+                    <div class="links">
+                        <a>关于我们</a><i>|</i><a>联系我们</a><i>|</i><a>联系客服</a><i>|</i><a>商家入驻</a><i>|</i><a>营销中心</a><i>|</i><a>手机品优购</a><i>|</i><a>友情链接</a><i>|</i><a>销售联盟</a><i>|</i><a>品优购社区</a><i>|</i><a>品优购公益</a><i>|</i><a>English&nbsp;Site</a><i>|</i><a>Contact&nbsp;U
+                    </div>
+                    <div class="copyright">
+                        <p>地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100 邮箱:zhanghj+itcast.cn</p>
+                        <p>京ICP备08001421号京公网安备110108007702</p>
+                    </div>
 
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- footer底部模块end -->
+        </footer>
+        <!-- footer底部模块end -->
 </body>
 
 </html>
